# blackjax-lumen

./: Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  b3_fit.py  blackjax_ns.py  debug_loglik.py  debug_map.py  debug_map2.py  debug_ns_init.py  diagnose_loglik.py  diagnose_loglik2.py  diagnose_loglik3.py  diagnose_loglik4.py  fit_ultranest.py  mydata.csv  mydata_ext.csv  pyproject.toml  sample_all_joint.ipynb  test_joint.ipynb  test_ns.py  test_ns_quick.py  walkthrough1.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  main-checkpoint.py  sample_all_joint-checkpoint.ipynb  test_ns-checkpoint.py
lumen/: __init__.py  constants.py  electrons.py  fitting.py  ic.py  profiles.py  synchrotron.py  types.py
